--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MJ Chat App </title>
+    <title>Madhur's Chat App </title>
   </head>
   <body>
     <div id="root"></div>
